--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # keys
-./keys.js
+../keys.js
 # dependencies
 /node_modules
 /.pnp
