--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # keys
-./src/keys.js
+src/keys.js
 # dependencies
 /node_modules
 /.pnp
